--- a/index.html
+++ b/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Dicee</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Dicee</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
+  <body>
+    <div class="container">
+      <h1>Start Playing</h1>
 
-</head>
+      <button id="refreshButton">Roll Dice</button>
 
-<body>
+      <div class="dices">
+        <div class="dice">
+          <p>Player 1</p>
+          <img class="img1" src="images/dice6.png" />
+        </div>
 
-  <div class="container">
-    <h1>Refresh Me</h1>
-
-    <div class="dice">
-      <p>Player 1</p>
-      <img class="img1" src="images/dice6.png">
+        <div class="dice">
+          <p>Player 2</p>
+          <img class="img2" src="images/dice6.png" />
+        </div>
+      </div>
     </div>
 
-    <div class="dice">
-      <p>Player 2</p>
-      <img class="img2" src="images/dice6.png">
-    </div>
+    <script type="text/javascript" src="index.js"></script>
+  </body>
 
-  </div>
-
-  <script type="text/javascript" src="index.js"></script>
-</body>
-
-<footer>
-  www 🎲 App Brewery 🎲 com
-</footer>
-
+  <footer>
+    <a href="https://www.ezaz.dev" target="_blank">www 🎲 ezaz 🎲 dev</a>
+  </footer>
 </html>
